Add acidblood and images

--- a/entries/projects/thearcade.html
+++ b/entries/projects/thearcade.html
@@ -92,7 +92,8 @@
     our front range under winter's end<br>
     cold spears<br>
     field trap<br>
-    young masks<br>
+    young masques<br>
+    pointing towards the gravel bloom<br>
 
 
     
