--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </div>
     <div class="links">
         <p>
-            <a href="./entries/amazonia140522.html">amazonia140522</a>
+            <a href="./entries/acidbloodmarblesea030624.html">acidbloodmarblesea030624</a> 
+            <br><a href="./entries/amazonia140522.html">amazonia140522</a>
             <br><a href="./entries/antiquechurch240323.html">antiquechurch240323</a>
             <br><a href="./entries/bankandshoal130823.html">bankandshoal130823</a>
             <br><a href="./entries/beachscreenrift140823.html">beachscreenrift140823</a>
@@ -298,7 +299,9 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/fieldtrap.jpg" alt="the same field and tree copied from different angles" id="fieldtrappic"><p>field trap</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/masque.jpg" alt="children at a birthday party with masks" id="masquepic"><p>young masks</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/masque.jpg" alt="children at a birthday party with masks" id="masquepic"><p>young masques</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/traingravel.jpg" alt="train tracks at Colchester station" id="traintrackspic"><p>pointing towards the gravel bloom</p></div>
 
     </div>
 
