change screen reader and add woodland glass

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <br><a href="./entries/wetradiovoice230522.html">wetradiovoice230522</a> 
             <br><a href="./entries/wheelingwatchingbirds181223.html">wheelingwatchingbirds181223</a>
             <br><a href="./entries/windwarp180323.html">windwarp180323</a>
+            <br><a href="./entries/woodlandglass200624.html">woodlandglass200624</a>
             <br><a href="./entries/woodpeckerwindowandkong080424.html">woodpeckerwindowandkong080424</a>
             <br><a href="./entries/yachts070722.html">yachts070722</a>
         </p>
@@ -133,176 +134,7 @@
 
     
     <div class="arcadetitle">
-        the screen reader's arcade
-    </div>
-
-    <div class="images">
-        <div class="imgcontainerhigher"><img src="./resources/images/mountainlake.jpg" alt="mountains I haven't visited" id="mountainlakepic"><p>mountains I've never visited</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/heron.jpg" alt="lone heron in a pixel gull field, scrubbed through two screens" id="heronpic"><p>lone heron in a pixel gull field, scrubbed through two screens</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/mexicandog.jpg" alt="lone dog on dappled cotton" id="mexicandogpic"><p>lone dappled mutt</p></div>
-
-        <div class="imgcontainersmallsquare"><img src="./resources/images/treeedit.jpg" alt="beneath this silver birch and vapour trail, people were covered in mud, burning up, trying to complete a marathon. we walked and watched, breathing relatively free." id="treeeditpic"><p>people were covered in mud, burning up, trying to run a marathon</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/sleepingcat.jpg" alt="lone cat on dream felt" id="sleepingcatpic"><p>lone cat on dream felt</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/alps.jpg" alt="more mountains I haven't seen, and a moon I have" id="alpspic"><p>more mountains I haven't seen, and a moon I have</p></div>
-
-        <div class="imgcontainerlonglandscape"><img src="./resources/images/mineralpattern.jpg" alt="mineral stomach under blue glass" id="mineralpatternpic"><p>mineral stomach under blue glass</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/sicily.jpg" alt="tidal sheep in a green field" id="sicilypic"><p>tidal sheep in a green field</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>ink curtain beachwater</p></div>
-
-        <div class="imgcontainerlonglandscape"><img src="./resources/images/widetree.jpg" alt="the silver tree's cousins, turned on their sides" id="widetreepic"><p>the silver tree's cousins, turned on their sides</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/treewalk.jpg" alt="the further you can see through forests, the further you walk" id="treewalkpic"><p>the further you see through forests, the further you walk</p></div>
-
-        <div class="imgcontainerlonglandscape"><img src="./resources/images/heronalone.jpg" alt="lone heron in a pixel field, no gulls, still scrubbed through two screens" id="heronalonepic"><p>lone heron in a pixel field, no gulls, <br>still scrubbed through two screens</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/field.jpg" alt="mooncrop" id="fieldpic"><p>mooncrop</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/pond.jpg" alt="when we first moved here, the pond was filled with earth and empty bottles" id="pondpic"><p>when we first moved here, the pond was filled with earth and empty bottles</p></div>
-
-        <div class="imgcontainersmallsquare"><img src="./resources/images/closeupplants.jpg" alt="red tendrils that would suit an underwater scene" id="closeupplantspic"><p>red tendrils that could sprout from a coral reef, nowhere near water</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/stadium.jpg" alt="listening to Soccer Mommy en las sombras de los estadios" id="stadiumpic"><p>listening in the shadows of stadiums</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/moon.jpg" alt="mooncrop" id="moonpic"><p>mooncrop</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/redrock.jpg" alt="red rock and rolled out blues" id="redrockpic"><p>red rock and rolled out blues</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/guineapig.jpg" id="guineapigpic" alt="galactic guinea pig, winged and ruling from the pane"><p>galactic gopher, winged and ruling from the pane</p></div>
-
-        <div class="imgcontainersmallsquare"><img src="./resources/images/woodwalk.jpg" alt="woodland bath path" id="woodwalkpic"><p>woodland bath path</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/stormcloud.jpg" alt="cumulonimbus wired to fuck" id="stormcloudpic"><p>cumulonimbus wired to blitz</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/birthday.jpg" alt="candlecake for the elderstep" id="birthdaypic"><p>candlecake for the elderstep</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/sunoverhorses.jpg" alt="sundrop over the horse yard" id="sunoverhorsespic"><p>sundrop over the horse yard</p></div>
-
-        <div class="imgcontainersmallsquare"><img src="./resources/images/skyframe.jpg" alt="skypatch and mainframe" id="skyframepic"><p>skypatch and mainframe</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/treestand.jpg" alt="mooncrop and treestand" id="treestandpic"><p>mooncrop and treestand</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/petshop.jpg" alt="scalefursale" id="petshoppic"><p>scalefursale</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/cathide.jpg" alt="burrow" id="cathidepic"><p>burrow</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/medici.jpg" alt="medici" id="medicipic"><p>holy yellow passage for the medici</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/ancestors.jpg" alt="terrestrial ancestors, greyed and gazing from the pane" id="ancestorspic"><p>terrestrial ancestors, grey and gazing from the pane</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/church.jpg" alt="godloom" id="churchpic"><p>clockloom</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/henry.jpg" alt="the watcher on the wall" id="henrypic"><p>the watcher on the wall</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/boatyard.jpg" alt="boatgut" id="boatyardpic"><p>boatgut</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/barkinpark.jpg" alt="bark for park's sake" id="barkinparkpic"><p>bark for park's sake</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/aucklandbridge.jpg" alt="Auckland, city of bays and coves" id="aucklandbridgepic"><p>bridge, shimmer, and cove upon cove</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/barkonbay.jpg" alt="looming trunk over water" id="barkonbaypic"><p>trunk and untroubled water</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/barkonbark.jpg" alt="bark climbing over bark" id="barkonbarkpic"><p>bark for bark's sake</p></div>
-
-        <div class="imgcontainersmallsquare"><img src="./resources/images/ferns.jpg" alt="kiwi ferns of different shades" id="fernspic"><p>paleozoia</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/mangrove.jpg" alt="mangrove city" id="mangrovepic"><p>mangrove burbs</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/rootdrop.jpg" alt="huge banyan" id="rootdroppic"><p>rootlord and drooper</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/web.jpg" alt="cocoon web" id="webpic"><p>web bowl</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/kiwi.jpg" alt="kiwi bird drifting beneath the wing mirror" id="kiwipic"><p>the watcher in the wingroad</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/tui.jpg" alt="tui perched on branch beneath huge tree" id="tuipic"><p>tui bluff</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/purplepalms.jpg" alt="purple palms by waikaremoana" id="palmpic"><p>palm sunday</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/dawnpatrol.jpg" alt="the dogs at dawn" id="dawnpatrolpic"><p>dawn patrol</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/paua.jpg" alt="grid of paua shells" id="pauapic"><p>paua grid</p></div>
-
-        <div class="imgcontainersmallsquare"><img src="./resources/images/flyingduck.jpg" alt="duck flying across a Milford lake" id="duckpic"><p>unidentified flying duckjet</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/mothwall.jpg" alt="marble mothwall on the Milford track" id="mothwallpic"><p>mothwall</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/waterfall.jpg" alt="waterfall on the Milford track" id="waterfallpic"><p>the centrefold</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/frost.jpg" alt="receding frost on a football pitch" id="frostpic"><p>a layer of astrofrost decroaching</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/ivy.jpg" alt="climbing ivy upon the church" id="ivypic"><p>crawl space</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/routeburn.jpg" alt="view from the Routeburn Flats" id="routeburnpic"><p>highs of the routeburn flats</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/christchurchbeach.jpg" alt="sumner beach" id="christchurchbeachpic"><p>where the land things lie</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/loomers.jpg" alt="palm trees in Samoa" id="loomerspic"><p>loomers</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/treebleach.jpg" alt="poisoned trees outside Queenstown" id="treebleachpic"><p>tree bleach</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/primed.jpg" alt="a model mule in a glass case" id="mulepic"><p>mule gear</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/landgrab.jpg" alt="West Coast sea fog approaching coast like a spider" id="landgrabpic"><p>landgrab and gullspeck</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/epithelium.jpg" alt="the alps of Canterbury" id="epitheliumpic"><p>epithelium</p></div>
-  
-        <div class="imgcontainerportrait"><img src="./resources/images/wallmoth.jpg" alt="Milford fjord wall, patterned like a moth" id="wallmothpic"><p>wallmoth</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/lowyawning.jpg" alt="beach cave at Sumner" id="lowyawningpic"><p>low yawning</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/spookhouse.jpg" alt="house in the suburban night" id="spookhousepic"><p>spookhouse</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/parchedwalker.jpg" alt="a parched field on a summer walk in Essex" id="parchedwalkerpic"><p>parched walker</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/hotmoon.jpg" alt="Tongariro alpine crossing" id="hotmoonpic"><p>touch of a heated moon</p></div>
-
-        <div class="imgcontainersmallsquare"><img src="./resources/images/witchspire.jpg" alt="crooked church spire looking like a witch's hat" id="witchspirepic"><p>witchspire</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/idlewild.jpg" alt="wildflower in the rockies" id="idlewildpic"><p>idlewild</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/bumblecram.jpg" alt="bumble bees on a flower crammed with purple" id="bumblecrampic"><p>bumblecram</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/wetleaf.jpg" alt="Berkeley the dog standing next to a wet shimmering pavement leaf" id="wetleafpic"><p>wet leaf and the hound</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/aggie.jpg" alt="Soccer Mommy at the Aggie Theatre" id="aggiepic"><p>the aggie blues</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/bays.jpg" alt="Macandrew Bay" id="bayspic"><p>endless bays</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/frog.jpg" alt="a bright-skinned frog that survived the lawnmower" id="frogpic"><p>escaped the mowing blade</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/beetle.jpg" alt="a bright-skinned beetle that survived the hose" id="frogpic"><p>escaped the dousing hose</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/autumngym.jpg" alt="a truck beneath an autumnal tree outside our local gym" id="autumngympic"><p>autumn gym</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/howfallclimbs.jpg" alt="an autumn path with climbing orange trees" id="howfallclimbspic"><p>how fall climbs</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/howcolourswork.jpg" alt="autumn leaves against a blue sky" id="howcoloursworkpic"><p>how colours work</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/horsebones.jpg" alt="a rock formation looking like the bones of a horse" id="horsebonespic"><p>horse bones</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/dovedive.jpg" alt="diving doves next to medieval walls" id="dovedivepic"><p>unidentified falling dovejet</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/spinneybug.jpg" alt="a ladybug wanders through the cavernous earth of the spinney" id="spinneybugpic"><p>wandering the spinney</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/beachlifting.jpg" alt="a sandy beach with no pebbles in sight" id="beachliftingpic"><p>lifting the beach</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/hawk.jpg" alt="hawk in a blurred tree" id="hawkpic"><p>raptor</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/frontrange.jpg" alt="the front range of Colorado" id="frontrangepic"><p>our front range under winter's end</p></div>
-
-        <div class="imgcontainerportrait"><img src="./resources/images/spears.jpg" alt="snow covered shrubbery" id="spearspic"><p>cold spears</p></div>
-
-        <div class="imgcontainerhigher"><img src="./resources/images/fieldtrap.jpg" alt="the same field and tree copied from different angles" id="fieldtrappic"><p>field trap</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/masque.jpg" alt="children at a birthday party with masks" id="masquepic"><p>young masques</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/traingravel.jpg" alt="train tracks at Colchester station" id="traintrackspic"><p>pointing towards the gravel bloom</p></div>
-
+        <a href="./entries/projects/thescreenreadersarcade.html">the screen reader's arcade</a>
     </div>
 
 </body>
