small edit in woodland glass

--- a/entries/woodlandglass200624.html
+++ b/entries/woodlandglass200624.html
@@ -30,7 +30,7 @@
 
         <p>At its end: charred beer cans, silver scraps, shredded aerosol bottles, cluttered round the long-dead remnants of a bonfire. Kids and their faintly dangerous games.</p>
 
-        <p>I loved fire, too, when I was young. I sat around fires in the woods.</p>
+        <p>I loved fire, too, when I was young. I sat around fire in the woods.</p>
 
         <p>I notice, in the ashes, warped knots of molten glass, obsidian and smooth. The flames must have been intense, a forge out here in the old woods, nestled just beyond the dirt bike bend, away from all the other paths, the illegal trails, walked and walked until people are no longer willing to let them go.</p>
         
