Add gladegrave and image to arcade

--- a/entries/projects/thescreenreadersarcade.html
+++ b/entries/projects/thescreenreadersarcade.html
@@ -181,6 +181,8 @@
 
         <div class="imgcontainershortlandscape"><img src="../../resources/images/traingravel.jpg" alt="train tracks at Colchester station" id="traintrackspic"><p>pointing towards the gravel bloom</p></div>
 
+        <div class="imgcontainerhigher"><img src="../../resources/images/refuse.jpg" alt="art scraps left over from mask making day" id="refusepic"><p>refuse</p></div>
+
     </div>
     <div class="leave"> 
         <p><a href="../../index.html">x</a>
