--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <br><a href="./entries/opticverve/femur291122.html">femur291122</a>
             <br><a href="./entries/opticverve/flightdecks250622.html">flightdecks250622</a>
             <br><a href="./entries/opticverve/floodworldsandfieldwork211123.html">floodworldsandfieldwork211123</a>
+            <br><a href="./entries/opticverve/gladegrave010724.html">gladegrave010724</a>
             <br><a href="./entries/opticverve/homerun070622.html">homerun070622</a>
             <br><a href="./entries/opticverve/motherplant170522.html">motherplant170522</a>
             <br><a href="./entries/opticverve/onfrozenshores290224.html">onfrozenshores290224</a>
