--- a/entries/projects/thearcade.html
+++ b/entries/projects/thearcade.html
@@ -93,8 +93,10 @@
     cold spears<br>
     field trap<br>
     young masques<br>
-    pointing towards the gravel bloom<br>
+    point towards the gravel bloom<br>
     refuse<br>
+    pink tendrils, two years on, still far from water<br>
+    lizard feet<br>
 
 
     
