--- a/entries/projects/thescreenreadersarcade.html
+++ b/entries/projects/thescreenreadersarcade.html
@@ -179,9 +179,15 @@
 
         <div class="imgcontainershortlandscape"><img src="../../resources/images/masque.jpg" alt="children at a birthday party with masks" id="masquepic"><p>young masques</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="../../resources/images/traingravel.jpg" alt="train tracks at Colchester station" id="traintrackspic"><p>pointing towards the gravel bloom</p></div>
+        <div class="imgcontainershortlandscape"><img src="../../resources/images/traingravel.jpg" alt="train tracks at Colchester station" id="traintrackspic"><p>point towards the gravel bloom</p></div>
 
         <div class="imgcontainerhigher"><img src="../../resources/images/refuse.jpg" alt="art scraps left over from mask making day" id="refusepic"><p>refuse</p></div>
+
+        <div class="imgcontainerportrait"><img src="../../resources/images/pinktendrils.jpg" alt="pink tendril plants in a garden somewhere" id="pinktendrilspic"><p>pink tendrils, two years on, still far from water</p></div>
+
+        <div class="imgcontainersmallsquare"><img src="../../resources/images/lizardfeet.jpg" alt="green hedge texture looking like the feet of thousands of lizards" id="lizardfeetpic"><p>lizard feet</p></div>
+
+        
 
     </div>
     <div class="leave"> 
