Add sketchsleep and edit line height for arcade

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
             <br><a href="./entries/shelter060624.html">shelter060624</a>
             <br><a href="./entries/silentsailing290124.html">silentsailing290124</a>
+            <br><a href="./entries/sketchsleep130724.html">sketchsleep130724</a>
             <br><a href="./entries/skies191122.html">skies191122</a>
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
             <br><a href="./entries/snowscabs250324.html">snowscabs250324</a>
