--- a/entries/projects/thearcade.html
+++ b/entries/projects/thearcade.html
@@ -19,7 +19,7 @@
     more mountains I haven't seen, and a moon I have<br>
     mineral stomach under blue glass<br>
     tidal sheep in a green field<br>
-    ink curtain beachwater<br>
+    beach curtain ink water<br>
     the silver tree's cousins, turned on their sides<br>
     the further you see through forests, the further you walk<br>
     lone heron in a pixel field, no gulls, still scrubbed through two screens<br>
@@ -49,7 +49,7 @@
     bark for bark's sake<br>
     paleozoia<br>
     mangrove burbs<br>
-    rootlord and drooper<br>
+    rootlord, drooper<br>
     web bowl<br>
     the watcher in the wingroad<br>
     tui bluff<br>
@@ -97,6 +97,7 @@
     refuse<br>
     pink tendrils, two years on, still far from water<br>
     lizard feet<br>
+    lone cat on dream patch<br>
 
 
     
