--- a/entries/projects/thescreenreadersarcade.html
+++ b/entries/projects/thescreenreadersarcade.html
@@ -31,7 +31,7 @@
 
         <div class="imgcontainerhigher"><img src="../../resources/images/sicily.jpg" alt="tidal sheep in a green field" id="sicilypic"><p>tidal sheep in a green field</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="../../resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>ink curtain beachwater</p></div>
+        <div class="imgcontainershortlandscape"><img src="../../resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>beach curtain ink water</p></div>
 
         <div class="imgcontainerlonglandscape"><img src="../../resources/images/widetree.jpg" alt="the silver tree's cousins, turned on their sides" id="widetreepic"><p>the silver tree's cousins, turned on their sides</p></div>
 
@@ -91,7 +91,7 @@
 
         <div class="imgcontainershortlandscape"><img src="../../resources/images/mangrove.jpg" alt="mangrove city" id="mangrovepic"><p>mangrove burbs</p></div>
 
-        <div class="imgcontainerportrait"><img src="../../resources/images/rootdrop.jpg" alt="huge banyan" id="rootdroppic"><p>rootlord and drooper</p></div>
+        <div class="imgcontainerportrait"><img src="../../resources/images/rootdrop.jpg" alt="huge banyan" id="rootdroppic"><p>rootlord, drooper</p></div>
 
         <div class="imgcontainerportrait"><img src="../../resources/images/web.jpg" alt="cocoon web" id="webpic"><p>web bowl</p></div>
 
@@ -186,6 +186,8 @@
         <div class="imgcontainerportrait"><img src="../../resources/images/pinktendrils.jpg" alt="pink tendril plants in a garden somewhere" id="pinktendrilspic"><p>pink tendrils, two years on, still far from water</p></div>
 
         <div class="imgcontainersmallsquare"><img src="../../resources/images/lizardfeet.jpg" alt="green hedge texture looking like the feet of thousands of lizards" id="lizardfeetpic"><p>lizard feet</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="../../resources/images/dreampatch.jpg" alt="a sleeping cat on a yellow patch" id="dreampatchpic"><p>lone cat on dream patch</p></div>
 
         
 
