--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <br><a href="./entries/carbonraincopy030523.html">carbonraincopy030523</a>
             <br><a href="./entries/coralgym150524.html">coralgym150524</a>
             <br><a href="./entries/differentdogs030423.html">differentdogs030423</a>
+            <br><a href="./entries/distanceandfrost130824.html">distanceandfrost130824</a>
             <br><a href="./entries/drawnbyhand131223.html">drawnbyhand131223</a>
             <br><a href="./entries/dryfishing310722.html">dryfishing310722</a>
             <br><a href="./entries/eastertomb090423.html">eastertomb090423</a>
