Add a couple of entries

--- a/entries/glassghostscosmictrips211023.html
+++ b/entries/glassghostscosmictrips211023.html
@@ -26,7 +26,7 @@
 
         <p>Last night, the opening performer wore a white t-shirt, the front of which was almost entirely consumed by a huge, corpse-like head. The luminous outline wavered and shook as the musician applied themselves to their control panel; twisting effect dials, shifting filter parameters, queuing and triggering new layers, fading others out. The face on the shirt became as much a part of the performance for me as the subtones, the atmospheric judder of the bass.</p>
 
-        <p>I couldn't stop looking at its glassy eyes. I wondered if they'd chosen the shirt specifically, knowing its presence would be felt by the crowd. In the end, the musician became just a vehicle for that face and the sounds that accompanied it, a carrier for the ghostly being and its sonic realm. </p>
+        <p>I couldn't stop looking at its glassy eyes. I wondered if the musician had chosen the shirt specifically, knowing its presence would be felt by the crowd. In the end, the musician became just a vehicle for that face and the sounds that accompanied it, a carrier for the ghostly being and its sonic realm. </p>
         
     </div>
 
