--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <br><a href="./entries/mouldlines160124.html">mouldlines160124</a>
             <br><a href="./entries/mythmakers131122.html">mythmakers131122</a>
             <br><a href="./entries/nightbugs031122.html">nightbugs031122</a>
+            <br><a href="./entries/notknowingmeteors200824.html">notknowingmeteors200824</a>
             <br><a href="./entries/onlinechess140923.html">onlinechess140923</a>
             <br><a href="./entries/passwordbabble311023.html">passwordbabble311023</a>
             <br><a href="./entries/plasma240623.html">plasma240623</a>
@@ -116,6 +117,7 @@
             <br><a href="./entries/opticverve/motherplant170522.html">motherplant170522</a>
             <br><a href="./entries/opticverve/onfrozenshores290224.html">onfrozenshores290224</a>
             <br><a href="./entries/opticverve/pacificdrapes121022.html">pacificdrapes121022</a>
+            <br><a href="./entries/opticverve/pooldeerresidue160824.html">pooldeerresidue160824</a>
             <br><a href="./entries/opticverve/sleepingpatterns050624.html">sleepingpatterns050624</a>
             <br><a href="./entries/opticverve/swallowingsnow070723.html">swallowingsnow070723</a>
             <br><a href="./entries/opticverve/unfamiliarpark020922.html">unfamiliarpark020922</a>
@@ -133,6 +135,7 @@
     <br><a href="./entries/collaberrations/samsara.html">samsara</a>
     <br><a href="./entries/collaberrations/sentimentaldeer.html">sentimental deer</a>
     <br><a href="./entries/collaberrations/potomac.html">potomac</a>
+    <br><a href="./entries/collaberrations/distractions.html">distractions</a>
 
 
     
