Add corn trumpets

--- a/entries/projects/thearcade.html
+++ b/entries/projects/thearcade.html
@@ -98,6 +98,7 @@
     pink tendrils, two years on, still far from water<br>
     lizard feet<br>
     lone cat on dream patch<br>
+    trumpets of the corn<br>
 
 
     
