--- a/entries/projects/thescreenreadersarcade.html
+++ b/entries/projects/thescreenreadersarcade.html
@@ -189,6 +189,8 @@
 
         <div class="imgcontainershortlandscape"><img src="../../resources/images/dreampatch.jpg" alt="a sleeping cat on a yellow patch" id="dreampatchpic"><p>lone cat on dream patch</p></div>
 
+        <div class="imgcontainerportrait"><img src="../../resources/images/corntrumpets.jpg" alt="white flowers at the edge of a corn field" id="corntrumpetspic"><p>trumpets of the corn</p></div>
+
         
 
     </div>
