Add ridges and edit an entry for o++

--- a/entries/projects/magicandmachine/70differentrooms.html
+++ b/entries/projects/magicandmachine/70differentrooms.html
@@ -13,7 +13,7 @@
 <body>
     <div class="maintextsection">
         <p>In the first room - too many people inventing new games with new rules and new ways of playing.</p>
-        <p>In the second room - software begetting software begetting software, code writing its own code, arguing with itself over which language works best, creating languages named after circles of Dante's Inferno, staying after hours to discuss theories of elegance within digitial design, enjoying free capuccinos, or the digital equivalent, from a box that purrs.</p>
+        <p>In the second room - software begetting software begetting software, code writing its own code, arguing with itself over which language works best, creating languages named after circles of Dante's Inferno, staying after hours to discuss theories of elegance within digital design, enjoying free capuccinos, or the digital equivalent, from a box that purrs.</p>
         <p>Only a select few people are allowed to enter this second room. They usually can't work out if they like what they see.</p>
         <p>The first room remains fun, but increasingly irrelevant.</p>
     </div>
