--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         optic verve
     </div>
     <div class="links">
+
         <p>
             <a href="./entries/opticverve/aliencraft160223.html">aliencraft160223</a>
             <br><a href="./entries/opticverve/beached161222.html">beached161222</a>
@@ -118,6 +119,7 @@
             <br><a href="./entries/opticverve/onfrozenshores290224.html">onfrozenshores290224</a>
             <br><a href="./entries/opticverve/pacificdrapes121022.html">pacificdrapes121022</a>
             <br><a href="./entries/opticverve/pooldeerresidue160824.html">pooldeerresidue160824</a>
+            <br><a href="./entries/opticverve/ridges070924.html">ridges070924</a>
             <br><a href="./entries/opticverve/sleepingpatterns050624.html">sleepingpatterns050624</a>
             <br><a href="./entries/opticverve/swallowingsnow070723.html">swallowingsnow070723</a>
             <br><a href="./entries/opticverve/unfamiliarpark020922.html">unfamiliarpark020922</a>
