add two entries

--- a/entries/projects/thearcade.html
+++ b/entries/projects/thearcade.html
@@ -99,11 +99,9 @@
     lizard feet<br>
     lone cat on dream patch<br>
     trumpets of the corn<br>
-
-
-    
-
-
+    kiln blue<br> 
+    fire blanket<br>
+    grid lamp<br>
 </p>
 
 
