--- a/entries/projects/thescreenreadersarcade.html
+++ b/entries/projects/thescreenreadersarcade.html
@@ -191,6 +191,12 @@
 
         <div class="imgcontainerportrait"><img src="../../resources/images/corntrumpets.jpg" alt="white flowers at the edge of a corn field" id="corntrumpetspic"><p>trumpets of the corn</p></div>
 
+        <div class="imgcontainershortlandscape"><img src="../../resources/images/kilnblue.jpg" alt="the stage of the Lime Kiln Theatre" id="kilnbluepic"><p>kiln blue</p></div>
+
+        <div class="imgcontainerhigher"><img src="../../resources/images/fireblanket.jpg" alt="the sky over Fort Collins in the evening" id="fireblanketpic"><p>fire blanket</p></div>
+
+        <div class="imgcontainerportrait"><img src="../../resources/images/gridlamp.jpg" alt="flying over the midwest at night" id="gridlamppic"><p>grid lamp</p></div>
+
         
 
     </div>
