--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <br><a href="./entries/videoreps250522.html">videoreps230522</a>
             <br><a href="./entries/virtualdreamdrive210722.html">virtualdreamdrive210722</a>
             <br><a href="./entries/waitingnotingtime180923.html">waitingnotingtime180923</a>
+            <br><a href="./entries/wakingdogs011024.html">wakingdogs011024</a>
             <br><a href="./entries/wetradiovoice230522.html">wetradiovoice230522</a> 
             <br><a href="./entries/wheelingwatchingbirds181223.html">wheelingwatchingbirds181223</a>
             <br><a href="./entries/windwarp180323.html">windwarp180323</a>
@@ -138,6 +139,7 @@
     <br><a href="./entries/collaberrations/sentimentaldeer.html">sentimental deer</a>
     <br><a href="./entries/collaberrations/potomac.html">potomac</a>
     <br><a href="./entries/collaberrations/distractions.html">distractions</a>
+    <br><a href="./entries/collaberrations/spidersandash.html">spiders and ash</a>
 
 
     
