Add heating and bulbs, edit 57

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <br><a href="./entries/grainwave050124.html">grainwave050124</a>
             <br><a href="./entries/hailcast010424.html">hailcast010424</a>
             <br><a href="./entries/hawkingdrive220723.html">hawkingdrive220723</a>
+            <br><a href="./entries/heatingandbulbs021224.html">heatingandbulbs021224</a>
             <br><a href="./entries/meaningmystery131123.html">meaningmystery131123</a>
             <br><a href="./entries/millenniumbug291123.html">millenniumbug291123</a>
             <br><a href="./entries/missedclamsandoldstones100423.html">missedclamsandoldstones100423</a>
