--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <br><a href="./entries/syntheticsun061123.html">syntheticsun061123</a>
             <br><a href="./entries/tallestfall090323.html">tallestfall090323</a>
             <br><a href="./entries/taylorsmistake020723.html">taylorsmistake020723</a>
+            <br><a href="./entries/toygunsandchristmasmist271224.html">toygunsandchristmasmist271224</a>
             <br><a href="./entries/treeavalanche250223.html">treeavalanche250223</a>
             <br><a href="./entries/videoreps250522.html">videoreps230522</a>
             <br><a href="./entries/virtualdreamdrive210722.html">virtualdreamdrive210722</a>
